--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
-  "port": "COM3",
-  "baud_rate": 9600,
-  "timeout": 30,
-  "eol": "\r\n"
-}
-
+    "port": "COM5",
+    "baud_rate": 9600,
+    "bytesize": 8,
+    "parity": "N",
+    "stopbits": 1,
+    "timeout": 2,
+    "eol": "\r\n"
+  }
